# evm-proto-rs

./: Cargo.toml  README.md
scripts/: sync-protobuf.sh
src/: COSMOS_SDK_COMMIT  EVM_COMMIT  lib.rs  main.rs
src/prost/: cosmos.app.runtime.v1alpha1.rs  cosmos.app.v1alpha1.rs  cosmos.auth.module.v1.rs  cosmos.authz.v1beta1.rs  cosmos.autocli.v1.rs  cosmos.bank.v1beta1.rs  cosmos.base.node.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.reflection.v2alpha1.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.benchmark.module.v1.rs  cosmos.benchmark.v1.rs  cosmos.circuit.v1.rs  cosmos.consensus.v1.rs  cosmos.counter.module.v1.rs  cosmos.counter.v1.rs  cosmos.crisis.v1beta1.rs  cosmos.crypto.keyring.v1.rs  cosmos.crypto.multisig.rs  cosmos.distribution.v1beta1.rs  cosmos.epochs.module.v1.rs  cosmos.epochs.v1beta1.rs  cosmos.evidence.v1beta1.rs  cosmos.evm.crypto.v1.ethsecp256k1.rs  cosmos.evm.crypto.v1.ethsecp256k1.serde.rs  cosmos.evm.erc20.v1.rs  cosmos.evm.erc20.v1.serde.rs  cosmos.evm.feemarket.v1.rs  cosmos.evm.feemarket.v1.serde.rs  cosmos.evm.precisebank.v1.rs  cosmos.evm.precisebank.v1.serde.rs  cosmos.evm.types.v1.rs  cosmos.evm.types.v1.serde.rs  cosmos.evm.vm.v1.rs  cosmos.evm.vm.v1.serde.rs  cosmos.feegrant.v1beta1.rs  cosmos.gov.v1.rs  cosmos.gov.v1beta1.rs  cosmos.group.module.v1.rs  cosmos.group.v1.rs  (+14 more)
