[package]
name = "evm-proto-rs"
version = "0.1.0"
edition = "2024"

[lib]
name    = "evm_proto"
path    = "src/lib.rs"
doctest = false


[dependencies]
prost                  = { version = "0.13", default-features = false, features = ["prost-derive"] }
bytes                  = { version = "1.2",  default-features = false }
tonic                  = { version = "0.13.0",  default-features = false, optional = true }
serde                  = { version = "1.0",  default-features = false, optional = true }
schemars               = { version = "0.8", optional = true }
subtle-encoding        = { version = "0.5",  default-features = false }
base64                 = { version = "0.22", default-features = false, features = ["alloc"] }
flex-error             = { version = "0.4",  default-features = false }
informalsystems-pbjson = { version = "0.7.0", optional = true, default-features = false }
tendermint-proto       = { version = "0.38.0", default-features = false }
cosmos-sdk-proto       = { version = "0.24.0", default-features = false }
walkdir                      = "2.3"
prost-build                  = "0.13"
informalsystems-pbjson-build = "0.7.0"
argh                         = "0.1"
similar                      = "2.2"
tonic-build                  = "0.13.0"
regex                        = "1"

[features]
default = []
client = ["tonic", "tonic/transport"]
server = ["tonic", "tonic/transport"]
transport = ["tonic/transport"]
json-schema = ["schemars", "serde"]
proto-generated = []
